Added card shadows.

--- a/assets/scss/components/_card.scss
+++ b/assets/scss/components/_card.scss
@@ -4,6 +4,7 @@
   background-color: var(--clr-white);
   border-radius: 0.5rem;
   padding: 2rem;
+  box-shadow: 0 15px 30px -11px rgba(131, 166, 210, 0.50);
 
   &__text-area :first-child {
     padding-bottom: 0.375rem;
