--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,27 +1,10 @@
 @use '../abstract' as a;
-
-@font-face {
-  font-family: "Poppins", sans-serif;
-  src: url('../fonts/Poppins/Poppins-Regular.ttf') format('ttf');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: "Poppins", sans-serif;
-  src: url('../fonts/Poppins/Poppins-ExtraLight.ttf') format('ttf');
-  font-weight: 200;
-}
-
-@font-face {
-  font-family: "Poppins", sans-serif;
-  src: url('../fonts/Poppins/Poppins-SemiBold.ttf') format('ttf');
-  font-weight: 600;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 h1 {
   font-family: "Poppins", sans-serif;
   font-size: 2rem;
-  font-weight: 100;
+  font-weight: 200;
   line-height: 1.1;
   color: var(--clr-text);
 
@@ -40,7 +23,7 @@ h2 {
 p {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 300;
   color: var(--clr-text);
 }
 
